--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Ethereal by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="https://raw.githubusercontent.com/SohamWani/sohamwani.github.io/main/main.css" />
+		<link rel="stylesheet" href="main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
