--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
       }
       body {
       color: #394c4a;
-      font-family: 'Work Sans', helvetica, sans-serif;
+      font-family: 'Montserrat', helvetica, sans-serif;
       font-size: 1rem;
       font-weight: 300;
       line-height: 1.5;
       }
       h1 {
-      font-family: 'Unica One', cursive;
+      font-family: 'Montserrat', cursive;
       font-size: 3rem;
       }
       h2 {
-      font-family: 'Unica One', cursive;
+      font-family: 'Montserrat', cursive;
       font-size: 2.3rem;
       }
       h3 {
-      font-family: 'Unica One', cursive;
+      font-family: 'Montserrat', cursive;
       font-size: 1.8rem;
       }
       h4 {
@@ -88,7 +88,7 @@
       }
       .navbar-brand,
       .navbar-nav > li > a {
-      font-family: 'Unica One', cursive;
+      font-family: 'Montserrat', cursive;
       padding-bottom: 0;
       padding-top: 0;
       }
@@ -255,7 +255,7 @@
       margin-left: 6px;
       }
       .td-btn.small {
-      font-family: 'Work Sans', helvetica, sans-serif;
+      font-family: 'Montserrat', helvetica, sans-serif;
       font-size: 0.7rem;
       padding: 9px 15px 8px;
       }
