--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang='en' >
   <head>
-    <meta charset='UTF-8'>
-    <link rel='apple-touch-icon' type='image/png' href='https://cdn.pixabay.com/user/2021/05/18/13-52-19-863_250x250.jpg'/>
-    <meta name='apple-mobile-web-app-title' content='SohamWani'>
-    <link rel='shortcut icon' type='image/x-icon' href='https://cdn.pixabay.com/user/2021/05/18/13-52-19-863_250x250.jpg'/>
-    <link rel='mask-icon' type='image/x-icon' href='https://cdn.pixabay.com/user/2021/05/18/13-52-19-863_250x250.jpg'/>
-    <title>Soham Wani</title>
     <meta charset='utf-8'/>
     <meta name='viewport' content='width=device-width, initial-scale=1'/>
+    <meta name='apple-mobile-web-app-title' content='SohamWani'>
+    <link rel='icon' type='image/jpg' href='https://cdn.pixabay.com/user/2021/05/18/13-52-19-863_250x250.jpg'/>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'/>
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css'/>
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'/>
+    <title>Soham Wani</title>
     <style>
     </style>
   </head>
