--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'/>
     <meta name='viewport' content='width=device-width, initial-scale=1'/>
     <meta name='apple-mobile-web-app-title' content='SohamWani'>
-    <link rel='icon' type='image/jpg' href='https://cdn.pixabay.com/user/2021/05/18/13-52-19-863_250x250.jpg'/>
+    <link rel='icon' type='image/jpg' href='#'/>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'/>
     <title>Soham Wani</title>
     <style>
