--- a/index.html
+++ b/index.html
@@ -7,10 +7,26 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'/>
     <title>Soham Wani</title>
     <style>
-      
+      body {
+        font:Montserrat;
+      }
+      #menu {
+        text-align:left;
+        color:#ffffff;
+        background:#0c0c46;
+        padding:0.5px;
+        position:fixed;
+        top:0px;
+        width:100%;
+        left:0px;
+        z-index:9;
+      }
     </style>
   </head>
   <body>
+    <h2 id='menu'>
+      Soham
+    </h2>
     <script>
     </script>
   </body>
