--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'/>
     <title>Soham Wani</title>
     <style>
-      body {
-        font:Montserrat;
+      * {
+        font:normal normal 100% Montserrat;
       }
       #menu {
         text-align:left;
