--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
         left:0px;
         z-index:9;
       }
+      #menu h1 {
+        font-size:25px;
+        font-weight:900;
+      }
     </style>
   </head>
   <body>
-    <h2 id='menu'>
+    <h1 id='menu'>
       Soham
-    </h2>
+    </h1>
     <script>
     </script>
   </body>
