--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <style>
       * {
         font:normal normal 100% Montserrat;
+        text-rendering:optimizeLegibility;
+        -webkit-font-smoothing:antialiased;
       }
       #menu {
         text-align:left;
