--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
     </style>
   </head>
   <body>
-    <h1 id='menu'>
-      Soham
-    </h1>
+    <div id='menu'>
+      <h1>
+        Soham
+      </h1>
+    </div>
     <script>
     </script>
   </body>
