--- a/index.html
+++ b/index.html
@@ -1,64 +1,178 @@
 <!DOCTYPE html>
-<html lang='en:IN'>
-  <head>
-    <meta charset='utf-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1' />
-    <link rel='icon' type='image/jpg' href='#' />
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' />
+<html lang='en'>
+<head>
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <meta http-equiv='X-UA-Compatible' content='ie=edge' />
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css' integrity='sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==' crossorigin='anonymous' referrerpolicy='no-referrer' />
-    <script crossorigin='anonymous' integrity='sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=' src='https://code.jquery.com/jquery-3.6.0.min.js' /> < title > Soham Wani < /title> < style >
-      * {
-          font: normal normal 100% Montserrat;
-          text-rendering: optimizeLegibility;
-          -webkit-font-smoothing: antialiased;
-      }
-      .dshow {
-          display: block
-      }
-      .mshow {
-          display: none
-      }
-      @media screen and (max-width: 768px) {
-          .dshow {
-              display: none
-          }
-          .mshow {
-              display: block
-          }
-      }
-      #menubar {
-          text-align: left;
-          color: #ffffff;
-          background: #0c0c46;
-          padding: 0.5px;
-          position: fixed;
-          top: 0px;
-          width: 100%;
-          left: 0px;
-          z-index: 9;
-      }
-      #menubar h1 {
-          font-size: 25px;
-          font-weight: 900;
-          padding: 5px;
-      }
-      #mobilemenutoggle {
-          float: right;
-          font-size: 22px;
-          padding-top: 1.5px;
-          cursor: pointer;
-      } < /style> < /head > < body > < div id = 'menubar' > < h1 >
-      &nbsp; &nbsp; Soham < span id = 'mobilemenutoggle' class = 'mshow' > < i class = 'fa-solid fa-bars'></i>
-      &nbsp; &nbsp; < /span> < /h1 > < /div> < div style = 'clear:both;height:64.44px' / > < script >
-      var clicks = 0;
-      $('#mobilemenutoggler').click(function() {
-          if (clicks % 2 == 0) {
-              document.getElementById('mobilemenu').style.right = '0px';
-          } else {
-              document.getElementById('mobilemenu').style.right = '-100%';
-          }
-          ++clicks;
-      });
-    </script>
-    </body>
+    <style>
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+        .gr2 {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+        }
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Montserrat', sans-serif;
+            background-color: #0c0c36;
+            color: #999999;
+        }
+        h2,
+        .white, h3 {
+            color: #ffffff;
+        }
+        a {
+            color: #999999;
+            text-decoration: none;
+        }
+        .sec1 {
+            padding-top: 20vh;
+            text-align: center;
+        }
+        .sec1 p {
+            font-size: 1.1rem;
+            padding-bottom: 10px;
+            margin: 0;
+        }
+        .sec1 h2 {
+            font-size: 1.7rem;
+            margin-bottom: 10px;
+        }
+        .sec1 a {
+            font-size: 1.5rem;
+            padding: 10px;
+        }
+        .sec2 {
+            padding-top: 5vh;
+            width: 80%;
+        }
+        .sec2 h2 {
+            font-size: 1.7rem;
+            margin-bottom: 10px;
+        }
+        .sec2 h3 {
+            font-size: 1.2rem;
+            margin-bottom: 10px;
+        }
+        .sec2 p {
+            font-size: 1.1rem;
+            padding-bottom: 10px;
+            margin: 0;
+            width: 300px;
+        }
+        .sec2 a {
+            display: block;
+            padding: 5px;
+            font-size: 1.2rem;
+            width: 100px;
+        }
+        .sec2 a:hover {
+            font-size: 1.3rem;
+            color: #ffffff;
+            cursor: pointer;
+            transition: 0.2s;
+        }
+        .sec1 a:hover {
+            color: #ffffff;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+        .sec2 div {
+            width: 50vw;
+            float: left;
+        }
+        .sec2 section:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+@media (max-width: 780px) {
+            .gr2 {
+                grid-template-columns: 1fr;
+            }
+            .sec1 {
+                padding: 0;
+                padding-top: 5rem;
+            }
+            .sec2 {
+                padding-left: 20px;
+                padding-right: 20px;
+                padding-top: 2rem;
+                text-align: center;
+                width: auto!important;
+            }
+            .sec2 a, .sec2 p, .sec2 h2, .sec2 h3 {
+                width: auto!important;
+            }
+        }
+    </style>
+    <title>Soham Wani</title>
+</head>
+<body>
+    <div class='gr2'>
+        <div class='sec1'>
+            <i class='fas fa-code fa-5x white'></i>
+            <h2>Soham Wani</h2>
+            <p>
+                India, Asia
+            </p>
+            <a href='https://discord.gg/ADm2u27TFs'><i class='fab fa-discord'></i></a>
+            <a href='https://github.com/SohamWani'><i class='fab fa-github'></i></a>
+            <a href='https://youtube.com/spacexplore'><i class='fab fa-youtube'></i></a>
+            <a href='https://pixabay.com/users/sohamwani-20539330/'><i class='fa fa-image'></i></a>
+        </div>
+        <div class='sec2'>
+            <section>
+                <h2>About</h2>
+                <p>
+                    I am a passionate blogger and a coding enthusiast currently studying in 12th grade (Science).
+                </p>
+            </section>
+            <section>
+                <h2>Skills</h2>
+                <h3>
+                    Languages
+                </h3>
+                <a href='#' onClick='return false;'>HTML (95%)</a>
+                <a href='#' onClick='return false;'>CSS (85%)</a>
+                <a href='#' onClick='return false;'>JavaScript (80%)</a>
+                <a href='#' onClick='return false;'>C++ (65%)</a>
+                <a href='#' onClick='return false;'>Java (5%)</a>
+                <h3>
+                    IDEs and Platforms
+                </h3>
+                <a href='#' onClick='return false;'>Blogger</a>
+                <a href='#' onClick='return false;'>GitHub</a>
+                <a href='#' onClick='return false;'>Replit</a>
+                <a href='#' onClick='return false;'>AIDE</a>
+                <!--<div>
+                                                                    <h3>
+                                                                        Frameworks and Dependencies
+                                                                    </h3>
+                                                                    <a href='#' onClick='return false;'>Node.js</a>
+                                                                    <a href='#' onClick='return false;'>Discord.js</a>
+                                                                </div>-->
+            </section>
+            <section>
+                <h2>Projects</h2>
+                <a href='https://usualqueries.blogspot.com'>Usual Queries<br />(Blog)</a>
+                <a href='https://discord.gg/zWxgQCAD94'>Usual Bot<br />(Discord Bot)</a>
+                <a href='https://drive.google.com/file/d/1IFIB6YFYbgNlSe0UYSdHPSQqdZVji7Em/view?usp=drivesdk'>Usual Queries<br />(Webview App)</a>
+            </section>
+            <section>
+                <h2>Contact</h2>
+                <a href='mailto:sohamwani1812@gmail.com'>sohamwani1812@gmail.com</a>
+            </section>
+            <section>
+                <h2>
+                    ---x---
+                </h2>
+                <p>
+                    I am to busy (lazy hehe) to make a full fledged website. But I will make one soon. Peace!
+                </p>
+            </section>
+        </div>
+    </div>
+</body>
 </html>
