--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class='gr2'>
         <div class='sec1'>
             <i class='fas fa-code fa-5x white'></i>
-            <h2>Soham Wani</h2>
+            <h2>Pseudonymous123</h2>
             <p>
                 India, Asia
             </p>
@@ -159,10 +159,6 @@
                 <a href='https://usualqueries.blogspot.com'>Usual Queries<br />(Blog)</a>
                 <a href='https://discord.gg/zWxgQCAD94'>Usual Bot<br />(Discord Bot)</a>
                 <a href='https://drive.google.com/file/d/1IFIB6YFYbgNlSe0UYSdHPSQqdZVji7Em/view?usp=drivesdk'>Usual Queries<br />(Webview App)</a>
-            </section>
-            <section>
-                <h2>Contact</h2>
-                <a href='mailto:sohamwani1812@gmail.com'>sohamwani1812@gmail.com</a>
             </section>
             <section>
                 <h2>
