--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
 <body>
     <div class='gr2'>
         <div class='sec1'>
-            <i class='fas fa-code fa-5x white'></i>
+            <img src="https://cdn.pixabay.com/user/2021/05/18/13-52-19-863_250x250.jpg" style="border-radius:50%">
+            <!--<i class='fas fa-code fa-5x white'></i>-->
             <h2>Pseudonymous123</h2>
             <p>
                 India, Asia
