--- a/index.html
+++ b/index.html
@@ -114,16 +114,16 @@
         <div class='sec1'>
             <img src="https://cdn.pixabay.com/user/2021/05/18/13-52-19-863_250x250.jpg" style="border-radius:50%">
             <!--<i class='fas fa-code fa-5x white'></i>-->
-            <h2>Pseudonymous123</h2>
+            <h2>Soham Wani<br>(aka Pseudonymous123)</h2>
             <p>
                 India, Asia
             </p>
-            <a href='https://discord.gg/ADm2u27TFs'><i class='fab fa-discord'></i></a>
+            <!--<a href='https://discord.gg/ADm2u27TFs'><i class='fab fa-discord'></i></a>
             <a href='https://github.com/SohamWani'><i class='fab fa-github'></i></a>
             <a href='https://youtube.com/spacexplore'><i class='fab fa-youtube'></i></a>
-            <a href='https://pixabay.com/users/sohamwani-20539330/'><i class='fa fa-image'></i></a>
+            <a href='https://pixabay.com/users/sohamwani-20539330/'><i class='fa fa-image'></i></a>-->
         </div>
-        <div class='sec2'>
+        <!--<div class='sec2'>
             <section>
                 <h2>About</h2>
                 <p>
@@ -163,13 +163,13 @@
             </section>
             <section>
                 <h2>
-                    ---x---
+                    -x-
                 </h2>
                 <p>
-                    I am to busy (lazy hehe) to make a full fledged website. But I will make one soon. Peace!
+                    I am too busy (lazy hehe) to make a full fledged website. But I will make one soon. Peace!
                 </p>
             </section>
-        </div>
+        </div>-->
     </div>
 </body>
 </html>
