--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
                 <a href='#' onClick='return false;'>GitHub</a>
                 <a href='#' onClick='return false;'>Replit</a>
                 <a href='#' onClick='return false;'>AIDE</a>
-                <!--<div>
+                <div>
                                                                     <h3>
                                                                         Frameworks and Dependencies
                                                                     </h3>
                                                                     <a href='#' onClick='return false;'>Node.js</a>
                                                                     <a href='#' onClick='return false;'>Discord.js</a>
-                                                                </div>-->
+                                                                </div>
             </section>
             <section>
                 <h2>Projects</h2>
