--- a/index.html
+++ b/index.html
@@ -1,175 +1,131 @@
-<!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
+
 <head>
-    <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <meta http-equiv='X-UA-Compatible' content='ie=edge' />
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css' integrity='sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==' crossorigin='anonymous' referrerpolicy='no-referrer' />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-        .gr2 {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-        }
+        @import url("https://fonts.googleapis.com/css?family=Montserrat");
+
         body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Montserrat', sans-serif;
-            background-color: #0c0c36;
-            color: #999999;
+            background-color: #0c0c46;
+            font-family: "Montserrat", sans-serif;
         }
-        h2,
-        .white, h3 {
-            color: #ffffff;
-        }
-        a {
-            color: #999999;
-            text-decoration: none;
-        }
-        .sec1 {
-            padding-top: 30vh;
+
+        main {
             text-align: center;
-        }
-        .sec1 p {
-            font-size: 1.1rem;
-            padding-bottom: 10px;
-            margin: 0;
-        }
-        .sec1 h2 {
-            font-size: 1.7rem;
-            margin-bottom: 10px;
-        }
-        .sec1 a {
-            font-size: 1.5rem;
-            padding: 10px;
-        }
-        .sec2 {
-            padding-top: 5vh;
-            width: 80%;
-        }
-        .sec2 h2 {
-            font-size: 1.7rem;
-            margin-bottom: 10px;
-        }
-        .sec2 h3 {
-            font-size: 1.2rem;
-            margin-bottom: 10px;
-        }
-        .sec2 p {
-            font-size: 1.1rem;
-            padding-bottom: 10px;
-            margin: 0;
-            width: 300px;
-        }
-        .sec2 a {
-            display: block;
-            padding: 5px;
-            font-size: 1.2rem;
-            width: 100px;
-        }
-        .sec2 a:hover {
-            font-size: 1.3rem;
-            color: #ffffff;
-            cursor: pointer;
-            transition: 0.2s;
-        }
-        .sec1 a:hover {
-            color: #ffffff;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-        .sec2 div {
-            width: 50vw;
-            float: left;
-        }
-        .sec2 section:after {
-            content: "";
-            display: table;
-            clear: both;
-        }
-@media (max-width: 780px) {
-            .gr2 {
-                grid-template-columns: 1fr;
+            justify-content: center;
+            position: absolute;
+            top: 50%;
+            width: 33vw;
+            left: 33%;
+            -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+
+            @media screen and (max-width: 768px) {
+                padding-top: 0vh;
             }
-            .sec1 {
-                padding: 0;
-                padding-top: 5rem;
-            }
-            .sec2 {
-                padding-left: 20px;
-                padding-right: 20px;
-                padding-top: 2rem;
-                text-align: center;
-                width: auto!important;
-            }
-            .sec2 a, .sec2 p, .sec2 h2, .sec2 h3 {
-                width: auto!important;
-            }
+        }
+
+        main>div {
+            padding: 30px;
+            text-align: center;
+            background-color: #dadaff;
+            border-radius: 7px;
+        }
+
+        main img {
+            height: 190px;
+            width: 190px;
+            border-radius: 50%;
+        }
+
+        main h1 {
+            color: #000000;
+            font-size: 35px;
+            line-height: 40px;
+            margin-bottom: 0px;
+        }
+
+        main h1>span {
+            font-size: 18px;
+            font-weight: 200;
+            line-height: 20px;
+        }
+
+        main a {
+            font-size: 22px;
+            text-decoration: none;
+            padding-right: 5px;
+            transition: all ease 0.25s;
+        }
+
+        main .a1 {
+            color: #0000ff;
+        }
+
+        main .a2 {
+            color: #ff0000;
+        }
+
+        main .a3 {
+            color: #000000;
+        }
+
+        main .a4 {
+            color: #1db954;
+        }
+
+        main .a5 {
+            color: #7289d9;
+        }
+
+        main .a6 {
+            color: #fc4f08;
+        }
+
+        main a:hover {
+            opacity: 25%;
+            font-size: 22.5px;
         }
     </style>
-    <title>Soham Wani</title>
 </head>
+
 <body>
-    <div class='gr2'>
-        <div class='sec1'>
-            <img src="https://cdn.pixabay.com/user/2021/05/18/13-52-19-863_250x250.jpg" style="border-radius:50%">
-            <!--<i class='fas fa-code fa-5x white'></i>-->
-            <h2>Soham Wani<br>(aka Pseudonymous123)</h2>
-            <p>
-                India, Asia
-            </p>
-            <!--<a href='https://discord.gg/ADm2u27TFs'><i class='fab fa-discord'></i></a>
-            <a href='https://github.com/SohamWani'><i class='fab fa-github'></i></a>
-            <a href='https://youtube.com/spacexplore'><i class='fab fa-youtube'></i></a>
-            <a href='https://pixabay.com/users/sohamwani-20539330/'><i class='fa fa-image'></i></a>-->
+    <main>
+        <div>
+            <img src="https://cdn.pixabay.com/user/2021/05/18/13-52-19-863_250x250.jpg" />
+            <h1>
+                Soham Wani
+                <br />
+                <span>
+                    (Pseudonymous123)
+                </span>
+            </h1>
+            <br />
+            <a class="a1" title="Blog" href="https://usualqueries.blogspot.com">
+                <i class="fa-solid fa-globe"></i>
+            </a>
+            <a class="a2" title="YouTube" href="https://youtube.com/spacexplore">
+                <i class="fab fa-youtube"></i>
+            </a>
+            <a class="a3" title="GitHub" href="https://github.com/Soham-Wani">
+                <i class="fab fa-github"></i>
+            </a>
+            <a class="a4" title="Pixabay" href="https://pixabay.com/users/sohamwani-20539330/">
+                <i class="fa fa-image"></i>
+            </a>
+            <a class="a5" title="Discord" href="https://discordapp.com/users/912297357339660309">
+                <i class="fa-brands fa-discord"></i>
+            </a>
+            <a class="a6" title="Blogger" href="https://draft.blogger.com/profile/14703622455073552485">
+                <i class="fa-brands fa-blogger-b"></i>
+            </a>
         </div>
-        <!--<div class='sec2'>
-            <section>
-                <h2>About</h2>
-                <p>
-                    I am a passionate blogger and a coding enthusiast currently studying in 12th grade (Science).
-                </p>
-            </section>
-            <section>
-                <h2>Skills</h2>
-                <h3>
-                    Languages
-                </h3>
-                <a href='#' onClick='return false;'>HTML (95%)</a>
-                <a href='#' onClick='return false;'>CSS (85%)</a>
-                <a href='#' onClick='return false;'>JavaScript (80%)</a>
-                <a href='#' onClick='return false;'>C++ (65%)</a>
-                <a href='#' onClick='return false;'>Java (5%)</a>
-                <h3>
-                    IDEs and Platforms
-                </h3>
-                <a href='#' onClick='return false;'>Blogger</a>
-                <a href='#' onClick='return false;'>GitHub</a>
-                <a href='#' onClick='return false;'>Replit</a>
-                <a href='#' onClick='return false;'>AIDE</a>
-                <div>
-                                                                    <h3>
-                                                                        Frameworks and Dependencies
-                                                                    </h3>
-                                                                    <a href='#' onClick='return false;'>Node.js</a>
-                                                                    <a href='#' onClick='return false;'>Discord.js</a>
-                                                                </div>
-            </section>
-            <section>
-                <h2>Projects</h2>
-                <a href='https://usualqueries.blogspot.com'>Usual Queries<br />(Blog)</a>
-                <a href='https://discord.gg/zWxgQCAD94'>Usual Bot<br />(Discord Bot)</a>
-                <a href='https://drive.google.com/file/d/1IFIB6YFYbgNlSe0UYSdHPSQqdZVji7Em/view?usp=drivesdk'>Usual Queries<br />(Webview App)</a>
-            </section>
-            <section>
-                <h2>
-                    -x-
-                </h2>
-                <p>
-                    I am too busy (lazy hehe) to make a full fledged website. But I will make one soon. Peace!
-                </p>
-            </section>
-        </div>-->
-    </div>
+    </main>
 </body>
+
 </html>
