--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             transform: translateY(-50%);
 
             @media screen and (max-width: 768px) {
-                width: 100vh;
+                width: 100vw;
             }
         }
 
