--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="en/in">
 
 <head>
     <meta charset="UTF-8" />
@@ -24,9 +24,12 @@
             left: 33%;
             -ms-transform: translateY(-50%);
             transform: translateY(-50%);
+        }
 
-            @media screen and (max-width: 768px) {
+        @media screen and (max-width: 768px) {
+            main {
                 width: 100vw;
+                left: 0px;
             }
         }
 
