--- a/index.html
+++ b/index.html
@@ -77,16 +77,20 @@
         main .a3 {
             color: #000000;
         }
-
+        
         main .a4 {
-            color: #1db954;
+            color: #000000;
         }
 
         main .a5 {
-            color: #7289d9;
+            color: #1db954;
         }
 
         main .a6 {
+            color: #7289d9;
+        }
+
+        main .a7 {
             color: #fc4f08;
         }
 
@@ -118,13 +122,16 @@
             <a class="a3" title="GitHub" href="https://github.com/Soham-Wani">
                 <i class="fab fa-github"></i>
             </a>
-            <a class="a4" title="Pixabay" href="https://pixabay.com/users/sohamwani-20539330/">
+            <a class="a4" title="Codepen" href="https://codepen.io/Pseudonymous123">
+                <i class="fa-brands fa-codepen"></i>
+            </a>
+            <a class="a5" title="Pixabay" href="https://pixabay.com/users/sohamwani-20539330/">
                 <i class="fa fa-image"></i>
             </a>
-            <a class="a5" title="Discord" href="https://discordapp.com/users/912297357339660309">
+            <a class="a6" title="Discord" href="https://discordapp.com/users/912297357339660309">
                 <i class="fa-brands fa-discord"></i>
             </a>
-            <a class="a6" title="Blogger" href="https://draft.blogger.com/profile/14703622455073552485">
+            <a class="a7" title="Blogger" href="https://draft.blogger.com/profile/14703622455073552485">
                 <i class="fa-brands fa-blogger-b"></i>
             </a>
         </div>
