--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en/in">
-
+<!-- I have made a template for this on codepen. Follow this link: https://codepen.io/Pseudonymous123/pen/eYKQKdg -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
