--- a/1.html
+++ b/1.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-    <script>let input, button, greeting;
+    <script>
+let input, button, greeting;
 
 function setup() {
   // create canvas
@@ -18,7 +19,7 @@ function setup() {
   button.position(input1.x + input1.width+20, 65);
   button.mousePressed(greet);
 
-  greeting = createElement('h2', 'Rezolvarea problemelor de min/max cu metoda Simplex.<br>Realizat de Cunev S. Dmitri  -- https://github.com/DimitriCunev<br>Lect. univ. dr. Marius Spinu');
+  greeting = createElement('h2', 'Simplex solver (with Big M)');
   greeting.position(20, 155);
 
   textAlign(CENTER);
