--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
         }
 
         main .a7 {
+            color: #0077b5;
+        }
+        
+        main .a8 {
             color: #fc4f08;
         }
 
@@ -132,7 +136,10 @@
             <a class="a6" title="Discord" href="https://discordapp.com/users/912297357339660309">
                 <i class="fa-brands fa-discord"></i>
             </a>
-            <a class="a7" title="Blogger" href="https://draft.blogger.com/profile/14703622455073552485">
+            <a class="a7" title="LinkedIn" href="https://www.linkedin.com/in/soham-wani-b0726a262/">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a class="a8" title="Blogger" href="https://draft.blogger.com/profile/14703622455073552485">
                 <i class="fa-brands fa-blogger-b"></i>
             </a>
         </div>
