--- a/index.html
+++ b/index.html
@@ -84,18 +84,22 @@
         }
 
         main .a5 {
+            color: #db4437;
+        }
+        
+        main .a6 {
             color: #1db954;
         }
 
-        main .a6 {
+        main .a7 {
             color: #7289d9;
         }
 
-        main .a7 {
+        main .a8 {
             color: #0077b5;
         }
         
-        main .a8 {
+        main .a9 {
             color: #fc4f08;
         }
 
@@ -133,13 +137,16 @@
             <a class="a5" title="Pixabay" href="https://pixabay.com/users/sohamwani-20539330/">
                 <i class="fa fa-image"></i>
             </a>
-            <a class="a6" title="Discord" href="https://discordapp.com/users/912297357339660309">
+            <a class="a6" title="Contact Me" href="mailto:sohamwani1812@gmail.com">
+                <i class="fa-regular fa-envelope"></i>
+            </a>
+            <a class="a7" title="Discord" href="https://discordapp.com/users/912297357339660309">
                 <i class="fa-brands fa-discord"></i>
             </a>
-            <a class="a7" title="LinkedIn" href="https://www.linkedin.com/in/soham-wani-b0726a262/">
+            <a class="a8" title="LinkedIn" href="https://www.linkedin.com/in/soham-wani-b0726a262/">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a class="a8" title="Blogger" href="https://draft.blogger.com/profile/14703622455073552485">
+            <a class="a9" title="Blogger" href="https://draft.blogger.com/profile/14703622455073552485">
                 <i class="fa-brands fa-blogger-b"></i>
             </a>
         </div>
