--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         }
 
         main .a5 {
-            color: #db4437;
-            font-size: 32px;
+            color: #d44638;
+            font-size: 27px;
         }
-        
+
         main .a6 {
             color: #1db954;
         }
@@ -99,7 +99,7 @@
         main .a8 {
             color: #0077b5;
         }
-        
+
         main .a9 {
             color: #fc4f08;
         }
@@ -135,8 +135,14 @@
             <a class="a4" title="Codepen" href="https://codepen.io/Pseudonymous123">
                 <i class="fa-brands fa-codepen"></i>
             </a>
+            <a style="color:#00000080">
+                <i class="fa-solid fa-angle-right"></i>
+            </a>
             <a class="a5" title="Contact Me" href="mailto:sohamwani1812@gmail.com">
-                <i class="fa-regular fa-envelope"></i>
+                <i class="fa-solid fa-envelope"></i>
+            </a>
+            <a style="color:#00000080">
+                <i class="fa-solid fa-angle-left"></i>
             </a>
             <a class="a6" title="Pixabay" href="https://pixabay.com/users/sohamwani-20539330/">
                 <i class="fa fa-image"></i>
