--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <!-- I have made a template for this on codepen. Follow this link: https://codepen.io/Pseudonymous123/pen/eYKQKdg -->
 
 <head>
-    <title>%ENV_T%</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -159,6 +158,9 @@
             </a>
         </div>
     </main>
+    <script>
+document.title = process.env.ENV_T;
+    </script>
 </body>
 
 </html>
