--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
         </div>
     </main>
     <script>
-        document.title = process.env.ENV_T;
+        document.addEventListener("DOMContentLoaded", function(event) {
+            document.title = process.env.ENV_T;
+        });
     </script>
 </body>
 
