--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </main>
     <script>
         document.addEventListener("DOMContentLoaded", function(event) {
-            document.title = process.env.ENV_T;
+            document.title = process.env['ENV_T'];
         });
     </script>
 </body>
