--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- I have made a template for this on codepen. Follow this link: https://codepen.io/Pseudonymous123/pen/eYKQKdg -->
 
 <head>
-    <title>ENV_T%</title>
+    <title>Soham Wani</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -85,23 +85,18 @@
         }
 
         main .a5 {
-            color: #d44638;
-            font-size: 27px;
-        }
-
-        main .a6 {
             color: #1db954;
         }
 
-        main .a7 {
+        main .a6 {
             color: #7289d9;
         }
 
-        main .a8 {
+        main .a7 {
             color: #0077b5;
         }
 
-        main .a9 {
+        main .a8 {
             color: #fc4f08;
         }
 
@@ -136,25 +131,16 @@
             <a class="a4" title="Codepen" href="https://codepen.io/Pseudonymous123">
                 <i class="fa-brands fa-codepen"></i>
             </a>
-            <a style="color:#00000080">
-                <i class="fa-solid fa-angle-right"></i>
-            </a>
-            <a class="a5" title="Contact Me" href="mailto:sohamwani1812@gmail.com">
-                <i class="fa-solid fa-envelope"></i>
-            </a>
-            <a style="color:#00000080">
-                <i class="fa-solid fa-angle-left"></i>
-            </a>
-            <a class="a6" title="Pixabay" href="https://pixabay.com/users/sohamwani-20539330/">
+            <a class="a5" title="Pixabay" href="https://pixabay.com/users/sohamwani-20539330/">
                 <i class="fa fa-image"></i>
             </a>
-            <a class="a7" title="Discord" href="https://discordapp.com/users/912297357339660309">
+            <a class="a6" title="Discord" href="https://discordapp.com/users/912297357339660309">
                 <i class="fa-brands fa-discord"></i>
             </a>
-            <a class="a8" title="LinkedIn" href="https://www.linkedin.com/in/soham-wani-b0726a262/">
+            <a class="a7" title="LinkedIn" href="https://www.linkedin.com/in/soham-wani-b0726a262/">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a class="a9" title="Blogger" href="https://draft.blogger.com/profile/14703622455073552485">
+            <a class="a8" title="Blogger" href="https://draft.blogger.com/profile/14703622455073552485">
                 <i class="fa-brands fa-blogger-b"></i>
             </a>
         </div>
