--- a/index.html
+++ b/index.html
@@ -68,38 +68,6 @@
             transition: all ease 0.25s;
         }
 
-        main .a1 {
-            color: #0000ff;
-        }
-
-        main .a2 {
-            color: #ff0000;
-        }
-
-        main .a3 {
-            color: #000000;
-        }
-
-        main .a4 {
-            color: #000000;
-        }
-
-        main .a5 {
-            color: #1db954;
-        }
-
-        main .a6 {
-            color: #7289d9;
-        }
-
-        main .a7 {
-            color: #0077b5;
-        }
-
-        main .a8 {
-            color: #fc4f08;
-        }
-
         main a:hover {
             opacity: 25%;
             font-size: 22.5px;
@@ -119,28 +87,28 @@
                 </span>
             </h1>
             <br />
-            <a class="a1" title="Blog" href="https://usualqueries.blogspot.com">
+            <a style="color:#0000ff" title="Blog" href="https://usualqueries.blogspot.com">
                 <i class="fa-solid fa-globe"></i>
             </a>
-            <a class="a2" title="YouTube" href="https://youtube.com/spacexplore">
+            <a style="color:#ff0000" title="YouTube" href="https://youtube.com/spacexplore">
                 <i class="fab fa-youtube"></i>
             </a>
-            <a class="a3" title="GitHub" href="https://github.com/Soham-Wani">
+            <a style="color:#000000" title="GitHub" href="https://github.com/Soham-Wani">
                 <i class="fab fa-github"></i>
             </a>
-            <a class="a4" title="Codepen" href="https://codepen.io/Pseudonymous123">
+            <a style="color:#000000" title="Codepen" href="https://codepen.io/Pseudonymous123">
                 <i class="fa-brands fa-codepen"></i>
             </a>
-            <a class="a5" title="Pixabay" href="https://pixabay.com/users/sohamwani-20539330/">
+            <a style="color:#1db954" title="Pixabay" href="https://pixabay.com/users/sohamwani-20539330/">
                 <i class="fa fa-image"></i>
             </a>
-            <a class="a6" title="Discord" href="https://discordapp.com/users/912297357339660309">
+            <a style="color:#7289d9" title="Discord" href="https://discordapp.com/users/912297357339660309">
                 <i class="fa-brands fa-discord"></i>
             </a>
-            <a class="a7" title="LinkedIn" href="https://www.linkedin.com/in/soham-wani-b0726a262/">
+            <a style="color:#0077b5" title="LinkedIn" href="https://www.linkedin.com/in/soham-wani-b0726a262/">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a class="a8" title="Blogger" href="https://draft.blogger.com/profile/14703622455073552485">
+            <a style="color:#fc4f08" title="Blogger" href="https://draft.blogger.com/profile/14703622455073552485">
                 <i class="fa-brands fa-blogger-b"></i>
             </a>
         </div>
