--- a/index.html
+++ b/index.html
@@ -96,20 +96,17 @@
             <a style="color:#000000" title="GitHub" href="https://github.com/Soham-Wani">
                 <i class="fab fa-github"></i>
             </a>
-            <a style="color:#000000" title="Codepen" href="https://codepen.io/Pseudonymous123">
-                <i class="fa-brands fa-codepen"></i>
-            </a>
-            <a style="color:#1db954" title="Pixabay" href="https://pixabay.com/users/sohamwani-20539330/">
-                <i class="fa fa-image"></i>
-            </a>
             <a style="color:#7289d9" title="Discord" href="https://discordapp.com/users/912297357339660309">
                 <i class="fa-brands fa-discord"></i>
+            </a>
+            <a style="color:#ff4500" title="Reddit" href="https://www.reddit.com/user/Pseudonymous123">
+                <i class="fa-brands fa-reddit"></i>
             </a>
             <a style="color:#0077b5" title="LinkedIn" href="https://www.linkedin.com/in/soham-wani-b0726a262/">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a style="color:#fc4f08" title="Blogger" href="https://draft.blogger.com/profile/14703622455073552485">
-                <i class="fa-brands fa-blogger-b"></i>
+            <a style="color:#1db954" title="Pixabay" href="https://pixabay.com/users/sohamwani-20539330/">
+                <i class="fa fa-image"></i>
             </a>
         </div>
     </main>
