--- a/index.html
+++ b/index.html
@@ -87,25 +87,25 @@
                 </span>
             </h1>
             <br />
-            <a style="color:#0000ff" title="Blog" href="https://usualqueries.blogspot.com">
+            <a style="color:#0000ff" title="Blog" href="https://usualqueries.blogspot.com" target="blank">
                 <i class="fa-solid fa-globe"></i>
             </a>
-            <a style="color:#ff0000" title="YouTube" href="https://youtube.com/spacexplore">
+            <a style="color:#ff0000" title="YouTube" href="https://youtube.com/spacexplore" target="blank">
                 <i class="fab fa-youtube"></i>
             </a>
-            <a style="color:#000000" title="GitHub" href="https://github.com/Soham-Wani">
+            <a style="color:#000000" title="GitHub" href="https://github.com/Soham-Wani" target="blank">
                 <i class="fab fa-github"></i>
             </a>
-            <a style="color:#7289d9" title="Discord" href="https://discordapp.com/users/912297357339660309">
+            <a style="color:#7289d9" title="Discord" href="https://discordapp.com/users/912297357339660309" target="blank">
                 <i class="fa-brands fa-discord"></i>
             </a>
-            <a style="color:#ff4500" title="Reddit" href="https://www.reddit.com/user/Pseudonymous123">
+            <a style="color:#ff4500" title="Reddit" href="https://www.reddit.com/user/Pseudonymous123" target="blank">
                 <i class="fa-brands fa-reddit"></i>
             </a>
-            <a style="color:#0077b5" title="LinkedIn" href="https://www.linkedin.com/in/soham-wani-b0726a262/">
+            <a style="color:#0077b5" title="LinkedIn" href="https://www.linkedin.com/in/soham-wani-b0726a262/" target="blank">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a style="color:#1db954" title="Pixabay" href="https://pixabay.com/users/sohamwani-20539330/">
+            <a style="color:#1db954" title="Pixabay" href="https://pixabay.com/users/sohamwani-20539330/" target="blank">
                 <i class="fa fa-image"></i>
             </a>
         </div>
