--- a/new.html
+++ b/new.html
@@ -53,7 +53,7 @@
         }
 
         #top-bar {
-            position: fixed;
+            position: absolute;
             padding: 6vh 4vw 6vh 4vw;
             left: 0;
             top: 0;
@@ -63,7 +63,7 @@
             font-weight: 900;
             z-index: 5;
             text-shadow: 0 0 50px black;
-            background: linear-gradient(to bottom, rgba(12, 12, 70, 1), rgba(0, 0, 0, 0));
+            background: linear-gradient(to bottom, rgba(12, 12, 70, 1), rgba(12, 12, 70, 0.9), rgba(12, 12, 70, 0.8), rgba(12, 12, 70, 0));
             text-align: center;
         }
 
@@ -88,6 +88,18 @@
 
             .left {
                 margin-bottom: 1vh;
+            }
+
+            .content {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+            }
+
+            #section-2 .content>div {
+                width: 80vw !important;
             }
         }
 
@@ -126,7 +138,7 @@
         #section-2 {
             height: 100vh;
             width: 100vw;
-            background: #1c1c64;
+            background: #0c0c66;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -135,7 +147,7 @@
         }
 
         #section-2>h2:nth-child(1) {
-            color: #ffdd00;
+            color: #ffffff;
             font-size: 6vh;
             font-weight: bold;
             margin-bottom: 2vh;
@@ -144,7 +156,7 @@
         #section-2 .content>div {
             width: 30vw;
             border-radius: 7px;
-            background: rgba(0, 0, 0, 0.2);
+            background: #0c0c46;
             padding: 1vw;
             margin: 1vw;
         }
@@ -163,26 +175,35 @@
         }
 
         #section-2 .outer {
-            background: rgba(0, 0, 0, 0.2);
-            border-radius: 7px;
-            margin-top: 1.5vh;
-            padding: 1.5vh 0 1.5vh 0;
+            margin-top: 1vh;
+            padding: 1vh 0 1.5vh 0;
         }
 
         #section-2 .content>div p:nth-of-type(1) {
             margin-top: 0.8vh;
-            color: #b190f3;
+            color: #ebebff;
             font-size: 2vh;
-            font-weight: bold;
+            font-weight: 500;
             margin-bottom: 0;
         }
 
         #section-2 .content>div p:nth-of-type(2) {
             margin-top: 0.8vh;
-            color: #8374a0;
+            color: #ffffcc;
             font-size: 1.8vh;
-            font-weight: bold;
+            font-weight: 300;
             margin-bottom: 0.8vh;
+        }
+
+        #section-3 {
+            height: 100vh;
+            width: 100vw;
+            background: #0c0c46;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
         }
     </style>
 </head>
@@ -244,6 +265,10 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div id="section-3">
+
+    </div>
 </body>
 
 </html>
