--- a/new.html
+++ b/new.html
@@ -341,7 +341,7 @@
         }
 
         #bottom-bar {
-            position: absolute;
+            position: relative;
             padding: 0.5vh;
             left: 0;
             bottom: 0;
