--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             font-family: "League Spartan", Arial, sans-serif;
         }
 
-
         .left {
             float: left;
         }
@@ -112,7 +111,7 @@
             top: 0;
             right: 0;
             font-size: 3vh;
-            color: white;
+            color: #ffffff;
             font-weight: 900;
             z-index: 5;
             text-shadow: 0 0 50px black;
@@ -385,7 +384,7 @@
     </div>
     <div id="section-1">
         <h2>Hello, I'm <span>Soham Wani</span></h2>
-        <h2><span class="txt-rotate" data-period="2000"
+        <h2><span class="txt-rotate" data-period="1000"
                 data-rotate='[ "Student", "Programming Enthusiast", "Passionate Content Writer", "Curious Learner", "Astronomy Fan", "AKA Pseudonymous123" ]'>A
                 student</span></h2>
     </div>
