--- a/index.html
+++ b/index.html
@@ -345,8 +345,7 @@
             critical thinking, while also creating unforgettable memories.</p>
         <p>Currently, I am studying full time at Gati Shakti Vishwavidyalaya while being a remote learner at IIT Madras.
         </p>
-        <p>Apart from academics, I like to learn new stuff, code, write poems, travel and spend
-            time with my family. </p>
+        <p>I love reading as well as writing. I enjoy learning new stuff. I am fond of travelling and exploring new places. </p>
     </div>
     <div id="section-3">
         <h2>Education</h2>
